# localbrain

./: .gitignore  .prettierignore  AGENTS.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: llm-tests.yml  release.yml
current-error/: error.md
docs/: privacy.md  release.md
docs/wiki/: eslint.config.js.md  index.md  postcss.config.js_05ed1c7f.md  src_App.tsx.md  src_App.tsx_26ad4b83.md  src_components_FlowView.tsx_9e5a41f6.md  src_components_GraphView.tsx_0fb4eda0.md  src_components_MainPanel.tsx.md  src_components_MainPanel.tsx_f0957275.md  src_components_RightPanel.tsx.md  src_components_RightPanel.tsx_fbc027a5.md  src_components_Sidebar.tsx.md  src_components_Sidebar.tsx_5f3a5cc0.md  src_components_WikiView.tsx_f5167789.md  src_lib_chat.ts_b552033a.md  src_lib_errors.ts_33a1fa95.md  src_lib_fileWatcher.ts.md  src_lib_fileWatcher.ts_b734e9d6.md  src_lib_graph.ts.md  src_lib_graph.ts_927b7c32.md  src_lib_indexer.ts_53c49062.md  src_lib_metadata.ts_3c90f074.md  src_lib_parser.ts.md  src_lib_search.ts.md  src_lib_search.ts_82164b7f.md  src_lib_settings.ts_b5f5521c.md  src_lib_wiki.ts.md  src_lib_wiki.ts_f80d85e8.md  (+6 more)
scripts/: release-check.sh  repair-local-llm.sh
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  test_llama  test_llama.rs  test_spawn.rs
src-tauri/.cargo/: config.toml
src-tauri/binaries/: libggml-base.0.10.2.dylib  libllama-common.0.dylib  libllama.0.0.9025.dylib  libllama.0.dylib  libmtmd.0.0.9025.dylib  libmtmd.0.dylib  llama-batched-bench  llama-bench  llama-cli  llama-completion  llama-cvector-generator  llama-debug-template-parser  llama-export-lora  llama-fit-params  llama-gguf-split  llama-imatrix  llama-mtmd-cli  llama-mtmd-debug  llama-perplexity  llama-quantize  llama-results  llama-template-analysis  llama-tokenize  llama-tts  rpc-server
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  logging.rs  main.rs  watcher.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/database/: mod.rs
src-tauri/src/embeddings/: mod.rs
src-tauri/src/graph/: mod.rs  schema.rs  store.rs
src-tauri/src/indexer/: mod.rs
src-tauri/src/llm/: local.rs  mod.rs
src-tauri/src/metadata/: mod.rs  schema.rs  store.rs  types.rs
src-tauri/src/parser/: generic.rs  mod.rs  python.rs  types.rs  typescript.rs
src-tauri/src/runbook/: mod.rs
src-tauri/src/search/: mod.rs
src-tauri/src/settings/: mod.rs  persistence.rs
src-tauri/src/wiki/: mod.rs
(+26 files in other folders)
