[package]
name = "localbrain"
version = "0.1.0"
description = "Local-first codebase intelligence platform"
authors = ["Localbrain"]
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "=2.6.0", features = [] }

[dependencies]
tauri = { version = "2.11.0", features = [] }
tauri-plugin-opener = "2.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
