[package]
name = "localbrain"
version = "0.1.0"
description = "Local-first codebase intelligence platform"
authors = ["Live Brain"]
edition = "2021"
rust-version = "1.81"
default-run = "localbrain"

[[bin]]
name = "test_spawn"
path = "test_spawn.rs"

[[bin]]
name = "test_llama"
path = "test_llama.rs"

[build-dependencies]
tauri-build = { version = "=2.6.0", features = [] }

[dependencies]
tauri = { version = "2.11.0", features = [] }
tauri-plugin-opener = "2.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"
thiserror = "1.0"
kuzu = "0.11.3"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
tree-sitter = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
walkdir = "2.5"
tauri-plugin-store = "2.4.3"
reqwest = { version = "0.13.3", features = ["json"] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.7.1"

[dev-dependencies]
tempfile = "3.12"
